codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__renders_file_change_approval_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, Rect::new(0, 0, 100, 28))"
---
                                                  │
  Dashboard  ◆ BC      gpt-5-codex ▾   default ▾  │   Status   │  Agents   │  Sessions   │  Help
──────────────────────────────────────────────────│─────────────────────────━━━━━━━━━━━━━──────────
                                                  │
 ◆ CONVERSATION                                   │▎◆ SESSIONS
          by app-server turns.                  │ │▎○ CLICK TO FOCUS  ACTIVE  0 sessions
 ▎ PLAN  1. Build shell                         │ │▎+ New session  Ctrl+N
         2. Wire transcript                     ┃ │▎loading sessions
         3. Render dashboard                    ┃ │
                                                ┃ │▎◆ THREAD
 ▌ tool exec just test -p codex-tui             ┃ │▎stage-one
                                                ┃ │▎id 01900000-0000-7000-8000-000000000001
 ▌ edited 3 files +128 -24                      ┃ │▎resume, fork, archive, delete in session list
                                                ┃ │
 ▎ CODEX  The new shell owns the fullscreen     ┃ │
          surface.                              ┃ │
                                                  │
╭────────────────────────────────────────────────╮│
│◆ APPROVAL                                      ││
│? Apply file changes: patch-1                   ││
│  Reason: Update the dashboard layout           ││
│  Grant root: /workspace/better-codex           ││
│> 1 Apply once                                  ││
│  2 Apply for this session                      ││
│  3 Deny                                        ││
│  4 Deny and interrupt                          ││
│   e Edit   ? Explain                           ││
╰────────────────────────────────────────────────╯│
