codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__renders_file_change_detail_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, area)"
---
 ◆ BC       gpt-5-codex ▾   default ▾  ● thinking │
──────────────────────────────────────────────────│ Sessions │ Agents │ Workspace │ Settings │Help
                                                  │━━━━━━━━━━━─────────────────────────────────────
 ◆ CONVERSATION                                   │
          by app-server turns.                  │ │▎◆ SESSIONS
 ▎ PLAN  1. Build shell                         │ │▎○ CLICK TO FOCUS  ACTIVE  0 sessions
         2. Wire transcript                     │ │▎loading sessions
         3. Render dashboard                    ┃ │
                                                ┃ │▎◆ TOOLS
 ▌ tool exec just test -p codex-tui             ┃ │▎in progress exec just test -p codex-tui
                                                ┃ │▎completed file changes in app_shell
 ▌ edited 3 files +128 -24                      ┃ │
                                                ┃ │▎◆ THREAD
 ▌ edited 5 files +4 -3                         ┃ │▎stage-one
 ▌          M src/app.rs                        ┃ │▎id 01900000-0000-7000-8000-000000000001
 ▌          A src/new.rs                        ┃ │▎resume, fork, archive, delete in session list
 ▌          D src/old.rs                        ┃ │
 ▌          R src/from.rs -> src/to.rs          ┃ │▎◆ STATUS
                                                ┃ │▎thinking
 ▎ CODEX  The new shell owns the fullscreen     ┃ │
          surface.                              ┃ │▎◆ PLAN
                                                  │▎Build the standalone shell in slices.
╭────────────────────────────────────────────────╮│▎x Shell frame
│◆ MESSAGE  ENTER SEND  SHIFT+ENTER NEWLINE  1:37││▎> Transcript model
│> Summarize the new shell architecture          ││▎- Approvals
│                                                ││
│                                                ││
╰────────────────────────────────────────────────╯│
