codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__renders_goal_progress_in_dashboard_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, area)"
---

 Better Codex                                                    ┌────────┬─────────┬────────┬────┐
                                                                 │Settings│Workspace│Sessions│Help│
                                                                 └────────┴─────────┴────────┴────┘
 Conversation
 system: Better Codex app shell                                  Sessions
 you: Create a divergent standalone TUI.                         unfocused active 0 shown
                                                                 loading sessions
 codex: Started a fullscreen app shell backed by app-server
        turns.                                                   Tools
 plan: 1. Build shell                                            in progress exec just test -p c...
       2. Wire transcript                                        completed file changes in app_s...
       3. Render dashboard
                                                                 Thread
 ▌ tool exec just test -p codex-tui                              stage-one
                                                                 id 01900000-0000-7000-8000-0000...
 ▌ edited 3 files +128 -24                                       resume, fork, archive, delete in

 codex: The new shell owns the fullscreen surface.               Status
                                                                 thinking

                                                                 Goal
                                                                 status active
                                                                 Complete the unchecked dashboar...
                                                                 1m | 12,345/50,000 tokens

                                                                 Plan
                                                                 Build the standalone shell in
                                                                 slices.
 Composer ready 1:37                                             x Shell frame
 > Summarize the new shell architecture                          > Transcript model
