codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__renders_minimum_terminal_size_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, area)"
---
  Dashboard  ◆ BC        gpt-5-codex ▾
────────────────────────────────────────
│
│ Status  │ Agents  │ Sessions  │ Help
│
╭──────────────────────────────────────╮
│◆ MESSAGE  1:37                       │
│> Summarize the new shell architecture│
│                                      │
│                                      │
╰──────────────────────────────────────╯
