codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__renders_model_availability_nux_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, area)"
---
                                                  │
 ◆ BC      gpt-5-codex ▾   default ▾   default ▾  │   Status   │  Agents   │  Sessions   │  Help
──────────────────────────────────────────────────│─────────────────────────━━━━━━━━━━━━━──────────
                                                  │
 ◆ CONVERSATION                                   │▎◆ SESSIONS
          by app-server turns.                  │ │▎○ CLICK TO FOCUS  ACTIVE  0 sessions
 ▎ PLAN  1. Build shell                         │ │▎loading sessions
         2. Wire transcript                     │ │
         3. Render dashboard                    ┃ │▎◆ THREAD
                                                ┃ │▎stage-one
 ▌ tool exec just test -p codex-tui             ┃ │▎id 01900000-0000-7000-8000-000000000001
                                                ┃ │▎resume, fork, archive, delete in session list
 ▌ edited 3 files +128 -24                      ┃ │
 ▎ SYSTEM  Our most capable model yet. GPT-     ┃ │
           5.6 Sol can tackle complex code      ┃ │
           changes, dig into research, produce  ┃ │
           polished documents, and take on your ┃ │
           most ambitious work. Sol is highly   ┃ │
           capable at lower reasoning efforts—  ┃ │
           try starting lower, then turn it up  ┃ │
           for harder jobs.                     ┃ │
                                                  │
╭────────────────────────────────────────────────╮│
│◆ MESSAGE  1:37                                 ││
│> Summarize the new shell architecture          ││
│                                                ││
│                                                ││
╰────────────────────────────────────────────────╯│
