codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__renders_model_runtime_details_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, area)"
---
                                                  │
  Dashboard  ◆ BC          gpt-5.6-sol ▾   max ▾  │   Status   │  Agents   │  Sessions   │  Help
──────────────────────────────────────────────────│━━━━━━━━━━━━────────────────────────────────────
                                                  │
 ◆ CONVERSATION                                   │▎◆ SETTINGS
 ▎ SYSTEM  Better Codex app shell                 │▎Model │ Permissions │ Appearance │Integrations
 ▎ YOU  Create a divergent standalone TUI.        │▎━━━━━━─────────────────────────────────────────
                                                  │▎› Model: gpt-5.6-sol
 ▎ CODEX  Started a fullscreen app shell backed   │▎  Reasoning: Max
          by app-server turns.                    │▎  Service tier: priority
 ▎ PLAN  1. Build shell                           │▎
         2. Wire transcript                       │
         3. Render dashboard                      │▎◆ PLAN
                                                  │▎Build the standalone shell in slices.
 ▌ tool exec just test -p codex-tui               │▎x Shell frame
                                                  │▎> Transcript model
 ▌ edited 3 files +128 -24                        │▎- Approvals
                                                  │
 ▎ CODEX  The new shell owns the fullscreen       │▎◆ TOOLS
          surface.                                │▎in progress exec just test -p codex-tui
                                                  │
                                                  │▎◆ EDITS
╭────────────────────────────────────────────────╮│▎3 files +128 -24
│◆ MESSAGE  1:37                                 ││
│> Summarize the new shell architecture          ││▎◆ WORKSPACE
│                                                ││▎profile managed
│                                                ││▎cwd /workspace/better-codex
╰────────────────────────────────────────────────╯│
